--- a/signup.html
+++ b/signup.html
@@ -26,7 +26,7 @@
 
       <input type="text"  class="form-control top"  name="firstName" placeholder="First Name" required autofocus>
       <input type="text"  class="form-control middle" name="lastName" placeholder="Last Name" required>
-      <input type="email" class="form-control bottom" name="email" placeholder="Password" required>
+      <input type="email" class="form-control bottom" name="email" placeholder="email" required>
 
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
       <p class="mt-5 mb-3 text-muted">&copy; Brian Spencer</p>
